# rosa

./: .gitignore  LICENSE.md  cms.sqlite  main.py  pyproject.toml  requirements.txt
.github/workflows/: python.yml
src/authentication/api/: schema.py
src/authentication/models/: user.py
src/cms/api/: __init__.py  article.py  author.py  category.py  routes.py  schema.py  tag.py
src/cms/models/: __init__.py  article.py  associations.py  author.py  category.py  image.py  language.py  tag.py
src/cms/services/: articles.py  authors.py  categories.py  tags.py
src/core/: exceptions.py
src/core/config/: api.py
src/core/database/: connection.py  db.py
src/utils/: create_tables.py  fill_dummy_values.py
tests/: test_api.py  test_db.py
