[tool.poetry]
name = "rosa"
version = "0.1.0"
description = "Rosa is a simple and fast content management system focussed on modularity and ease of customisation."
authors = ["Pratheesh Prakash <pratheeshraniprakash@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.3"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
orjson = "^3.10.2"
pydantic-settings = "^2.2.1"
email-validator = "^2.1.1"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
itsdangerous = "^2.2.0"
pyyaml = "^6.0.1"
strawberry-graphql = { extras = ["fastapi"], version = "^0.227.2" }
pytest = "^8.2.0"
sqlalchemy = "^2.0.29"
ruff = "^0.4.2"
refurb = "^2.0.0"
pydocstyle = "^6.3.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
plugins = ["pydantic-mypy"]
follow_imports = "normal"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = false

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
fixable = ["ALL"]

[tool.ruff.format]

quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]

select = [
    "E",
    "F",
    "C90",
    "W",
    "I",
    "D",
    "UP",
    "ERA",
    "PD",
    "PL",
    "TRY",
    "NPY",
    "FURB",
    "RUF",
]

ignore = ["UP038", "D104"]

[tool.ruff.lint.pydocstyle]

convention = "numpy"
