[tool.poetry]
name = "rosa"
version = "0.1.0"
description = "Rosa is a simple and fast content management system focussed on modularity and ease of customisation."
authors = ["Pratheesh Prakash <pratheeshraniprakash@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = { extras = ["standard"], version = "0.30.6" }
orjson = "^3.10.7"
pydantic-settings = "^2.4.0"
email-validator = "^2.2.0"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
itsdangerous = "^2.2.0"
pyyaml = "^6.0.2"
strawberry-graphql = "^0.237.3"
pytest = "^8.3.2"
sqlalchemy = {extras = ["asyncio"], version = "2.0.32"}
ruff = "^0.6.1"
refurb = "^2.0.0"
pydocstyle = "^6.3.0"
isort = "^5.13.2"
asyncio = "^3.4.3"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
pytest-asyncio = "^0.23.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
plugins = ["pydantic-mypy"]
follow_imports = "normal"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = false

[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 100
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".env.example",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
fixable = ["ALL"]

[tool.ruff.format]

quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]

select = ["ALL"]

ignore = ["UP038", "D104"]

[tool.ruff.lint.pydocstyle]

convention = "numpy"
